--- a/.gitignore
+++ b/.gitignore
@@ -396,3 +396,21 @@ FodyWeavers.xsd
 
 # JetBrains Rider
 *.sln.iml
+
+# Preact Ignore
+
+.DS_Store
+node_modules
+npm-debug.log
+dist
+*/package-lock.json
+yarn.lock
+.vscode
+.idea
+test/ts/**/*.js
+coverage
+*.sw[op]
+*.log
+package/
+preact-*.tgz
+preact.tgz
