--- a/SteamInventoryBackend/SteamInventory.Api/appsettings.json
+++ b/SteamInventoryBackend/SteamInventory.Api/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "SteamWebApiConfiguration": {
-    "ApiKey": "MX0Y0TILCJ2FNG6X",
+    "ApiKey": "",
     "BaseUrl": "https://www.steamwebapi.com/steam/api"
   },
   "MongoDbConfiguration": {
